Fixed scrollbar color

--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ body {
 }
 
 ::-webkit-scrollbar-thumb {
-    background: var(--color-secondary);
+    background: var(--color-primary);
     border-radius: 999rem;
     transition: var(--transition-bg);
 }
